project(learn-csapp)

#add_executable(x chap2/compare_str_length.c) # 生成可执行文件
#add_executable(x.exe chap2/2.3/add.c) # 生成可执行文件
add_executable(x.exe chap2/2.3/practice2_30.c) # 生成可执行文件
add_executable(practice2_30 chap2/2.3/practice2_30.c)
add_executable(grep_like grep_like.c)
add_executable(exercise-4-1 exercise-4-1.c)
add_executable(basic_calculator basic_calculator.c)